<resources>
    <string name="app_name">Butterfly Story</string>

    <string name="signin">Masuk</string>
    <string name="signup">Daftar</string>

    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="name">Nama</string>

    <string name="name_notif">Masukkan Nama Anda</string>
    <string name="email_notif">Masukkan Email Anda</string>
    <string name="password_notif">Masukkan Password Anda</string>

    <string name="upload">Posting</string>

    <string name="image_capture">ambil gambar</string>
    <string name="switch_camera">ganti kamera</string>
    <string name="photo_detail">photo detail</string>
    <string name="image_preview">gambar pratinjau</string>
    <string name="navigation_drawer_open">Buka navigation drawer</string>
    <string name="navigation_drawer_close">Tutup navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Pengaturan</string>

    <string name="title_activity_story">StoryActivity</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_stories">Cerita</string>
    <string name="menu_setting">Pengaturan</string>
    <string name="menu_maps">Peta</string>
    <string name="dateFormat">dd-mm-yyyy</string>
    <string name="detailStory">Detail Cerita</string>
    <string name="postStory">Unggah Cerita</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="camerax">Camera X</string>
    <string name="descText">Deskripsi</string>
    <string name="post">Unggah</string>

    <string name="dateAfter">"dd-MMM-yyyy"</string>

    <string name="no_access">Anda membutuhkan izin kamera untuk menggunakan kamera</string>

    <string name="logout">Keluar</string>
    <string name="back">kembali halaman utama</string>
    <string name="postTitle">Unggah Cerita</string>
    <string name="toPostDesc">Ke Unggah Cerita</string>
    <string name="tosharedesc">Bagikan</string>

    <string name="daftarText">Belum Punya Akun?</string>
    <string name="masukText">Sudah Punya Akun?</string>
    <string name="username">username</string>

    <string name="logoutSetting">Keluar Akun</string>
    <string name="languageSetting">Ganti Bahasa</string>
    <string name="themeSetting">Ganti Tema</string>
    <string name="locationSetting">Aktifkan Lokasi</string>

    <string name="picAPhoto">ambil gambar</string>
    <string name="rotateCam">putar Kamera</string>

    <string name="errorLogin">Terdapat Masalah Saat Hendak Masuk</string>
    <string name="errorRegister">Terdapat Masalah Saat Hendak Daftar</string>
    <string name="okay">Oke</string>

    <string name="errorEmail">Masukkan Email Yang Benar</string>
    <string name="errorPass">Password Harus Memiliki Minimal 8 Karakter</string>
    <string name="errorPostNoDesc">Harap masukkan deskripsi cerita</string>
    <string name="errorPostNoImg">Harap pilih gambar untuk diunggah</string>
    <string name="errorPost">Terjadi Kesalahan Saat Hendak Mengunggah</string>
    <string name="successPost">Berhasil Mengunggah Cerita</string>
    <string name="processPost">Sedang Proses Mengunggah</string>
    <string name="processLogin">Sedang Proses Masuk</string>
    <string name="processRegister">Sedang Proses Daftar</string>
    <string name="processMap">Sedang Memproses Peta</string>

    <string name="registerSuccess">Berhasil Membuat Akun</string>
    <string name="loginSuccess">Berhasil Masuk</string>

    <string name="spaceDesc">pembatas</string>
    <string name="CreatorTv">Pembuat</string>
    <string name="DescTv">Deskripsi</string>
    <string name="detailImgDesc">gambar unggahan</string>
    <string name="descAlert">peringatan</string>

    <string name="retryBtn">Coba Lagi</string>
    <string name="timeoutAlert">Waktu Habis</string>

    <string name="locationAlert">Lokasi Tidak Aktif</string>
    <string name="locationMessage">Aktifkan lokasi untuk mengirim story dengan lokasi.</string>
    <string name="locationGoSetting">Pengaturan</string>
    <string name="locationCancel">Batal</string>
</resources>