<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_stories">

    <fragment
        android:id="@+id/nav_stories"
        android:name="com.project.storyappproject.ui.home.stories.StoriesFragment"
        android:label="@string/menu_stories"
        tools:layout="@layout/fragment_stories" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.project.storyappproject.ui.home.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.project.storyappproject.ui.home.settings.SettingsFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_maps"
        android:name="com.project.storyappproject.ui.home.maps.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps"/>
</navigation>