<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/storyCv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/photo_detail"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/storyDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/photo"
            tools:text="deskripsi"/>

        <ImageView
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/spacer"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/storyDesc" />

        <TextView
            android:id="@+id/storyName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:layout_toEndOf="@id/photo"
            android:textAlignment="viewStart"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/spacer"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/storyDate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:layout_toEndOf="@id/photo"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/spacer"
            card_view:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/dateFormat" />

        <ProgressBar
            android:id="@+id/progressBarImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            card_view:layout_constraintBottom_toBottomOf="@+id/photo"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/photo"
            card_view:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>